[package]
name = "fmm"
version = "0.1.0"
authors = ["raiguard <caleb.heuer@gmail.com>"]
edition = "2021"

[dependencies]
directories = "3.0.2"
itertools = "0.10.1"
json = "0.12.4"
once_cell = "1.7.2"
regex = "1.4.5"
semver = {version = "0.11.0", features = ["serde"]}
serde = {version = "1.0.125", features = ["derive"]}
serde_derive = "1.0.126"
serde_json = "1.0.64"
structopt = "0.3.21"
thiserror = "1.0.25"
toml = "0.5.8"
zip = "0.5.11"
