[package]
name = "fmm"
version = "0.3.0"
authors = ["raiguard <caleb.heuer@gmail.com>"]
edition = "2021"
description = "Manage your Factorio mods."
readme = "README.md"
repository = "https://github.com/raiguard/fmm"
license = "MIT"
keywords = ["factorio", "cli", "structopt", "manager", "mod"]

[dependencies]
anyhow = "1.0.45"
binread = "2.2.0"
directories = "3.0.2"
json = "0.12.4"
once_cell = "1.7.2"
regex = "1.4.5"
semver = {version = "0.11.0", features = ["serde"]}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
serde_with = "1.11.0"
structopt = "0.3.21"
thiserror = "1.0.25"
toml = "0.5.8"
zip = "0.5.11"
