[package]
name = "fmm"
version = "0.5.0"
authors = ["raiguard"]
edition = "2021"
description = "Manage your Factorio mods."
readme = "README.md"
repository = "https://github.com/raiguard/fmm"
license = "MIT"
keywords = ["factorio", "cli", "structopt", "manager", "mod"]

[dependencies]
anyhow = "1.0.45"
byteorder = "1.4.3"
clap = {version = "3.1.5", features = ["derive"]}
compress = "0.2.1"
console = "0.15.0"
dirs = "4.0.0"
hex = "0.4.3"
indicatif = "0.16.2"
json = "0.12.4"
once_cell = "1.7.2"
regex = "1.4.5"
reqwest = {version = "0.11.6", features = ["blocking", "json"]}
semver = {version = "0.11.0", features = ["serde"]}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
serde_with = "1.11.0"
sha-1 = "0.9.8"
smart-default = "0.6.0"
thiserror = "1.0.25"
toml = "0.5.8"
zip = "0.5.11"

# Optimize releases for size - the speed is plenty good enough
[profile.release]
strip = true
opt-level = "z"
lto = true

[features]
